# rfz

./: .gitignore  Cargo.toml  README.md  flake.nix
rmenu/: rmenu
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  query.rs  search_engine.rs  tui.rs  ui.rs
