[profile.release]
lto = "fat"
[build]
rustflags = ["-Z", "threads=8","-C", "link-arg=-fuse-ld=lld","-C", "target-cpu=native" ]
[package]
name = "rfz"
version = "0.0.3"
authors = ["fede <fedemarc24@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
tokio =  "1.35.1"
brunch = "0.5.0"
ratatui = "0.26.1"
nucleo = "0.3.0"
rayon = "1.8.1"
tokio-stream = "0.1.14"
jwalk = "0.8.1"
indexmap = "2.2.3"
claps = "0.2.0"
