[profile.release]
lto = "fat"
[build]
rustflags = ["-Z", "threads=8","-C", "link-arg=-fuse-ld=lld","-C", "target-cpu=native" ]
[package]
name = "rfz"
version = "0.0.6"
authors = ["fede <fedemarc24@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
tokio =  {version="1.35.1",features=["full"]}
ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
nucleo = "0.3.0"
rayon = "1.8.1"
clap = {version = "4.5.2", features = ["cargo"]}
futures-util = "0.3.30"
jwalk = "0.8.1"

[dev-dependencies]
insta = "1.41.0"
mockall = "0.13.0"

